--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,19 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Nunito', sans-serif;
   &:before{
     content:'';
     width: 100%;
     height: 100vh;
-    //background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
-    // background: #D3D3D3;
     background-image: url("../public/bg.gif");
     position: fixed;
     left: 0;
@@ -59,4 +57,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.text-xxl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
